recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:6: error: ';' expected but 'return' found.
	} return
          ^